- set output dir

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "outDir": "./output/js",
         "target": "es5",
         "module": "commonjs",
         "sourceMap": true
